@@ -52,10 +52,8 @@ import pcgen.cdom.enumeration.Handed;
 import pcgen.cdom.enumeration.IntegerKey;
 import pcgen.cdom.enumeration.ListKey;
 import pcgen.cdom.enumeration.Nature;
-import pcgen.cdom.enumeration.NotePCAttribute;
 import pcgen.cdom.enumeration.NumericPCAttribute;
 import pcgen.cdom.enumeration.ObjectKey;
-import pcgen.cdom.enumeration.PCAttribute;
 import pcgen.cdom.enumeration.PCStringKey;
 import pcgen.cdom.enumeration.Region;
 import pcgen.cdom.enumeration.SkillFilter;
@@ -143,7 +141,6 @@ import pcgen.system.LanguageBundle;
 import pcgen.system.PCGenSettings;
 import pcgen.util.Logging;
 import pcgen.util.enumeration.ProhibitedSpellType;
-
 
 import org.apache.commons.lang3.StringUtils;
 
@@ -611,13 +608,13 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseBirthdayLine(String line)
 	{
-		thePC.setPCAttribute(PCAttribute.BIRTHDAY,
+		thePC.setPCAttribute(PCStringKey.BIRTHDAY,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_BIRTHDAY.length() + 1)));
 	}
 
 	private void parseBirthplaceLine(String line)
 	{
-		thePC.setPCAttribute(PCAttribute.BIRTHPLACE,
+		thePC.setPCAttribute(PCStringKey.BIRTHPLACE,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_BIRTHPLACE.length() + 1)));
 	}
 
@@ -1444,7 +1441,7 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseCatchPhraseLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.CATCHPHRASE,
+		thePC.setPCAttribute(PCStringKey.CATCHPHRASE,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_CATCHPHRASE.length() + 1)));
 	}
 
@@ -1462,7 +1459,7 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseCharacterDescLine(final String line)
 	{
-		thePC.setPCAttribute(NotePCAttribute.DESCRIPTION,
+		thePC.setPCAttribute(PCStringKey.DESCRIPTION,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_CHARACTERDESC.length() + 1)));
 	}
 
@@ -1485,13 +1482,13 @@ final class PCGVer2Parser implements PCGParser
 	 */
 	private void parseCharacterNameLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.NAME,
+		thePC.setPCAttribute(PCStringKey.NAME,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_CHARACTERNAME.length() + 1)));
 	}
 
 	private void parseCityLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.RESIDENCE,
+		thePC.setPCAttribute(PCStringKey.RESIDENCE,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_CITY.length() + 1)));
 	}
 
@@ -2926,33 +2923,33 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseHairColorLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.HAIRCOLOR,
+		thePC.setPCAttribute(PCStringKey.HAIRCOLOR,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_HAIRCOLOR.length() + 1)));
 	}
 
 	private void parseHairStyleLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.HAIRSTYLE,
+		thePC.setPCAttribute(PCStringKey.HAIRSTYLE,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_HAIRSTYLE.length() + 1)));
 	}
 
 	private void parseHandedLine(final String line)
 	{
-		String handed = EntityEncoder.decode(line.substring(IOConstants.TAG_HANDED.length() + 1));
-		Handed h;
+		String handedString = EntityEncoder.decode(line.substring(IOConstants.TAG_HANDED.length() + 1));
+		Handed handed;
 		try
 		{
-			h = HandedCompat.getHandedByName(handed);
+			handed = HandedCompat.HANDED_MANAGER.convert(handedString);
 		}
 		catch (IllegalArgumentException e)
 		{
-			h = HandedCompat.getDefaultHanded();
+			handed = HandedCompat.getDefaultHanded();
 			final String msg = LanguageBundle.getFormattedString("Warnings.PCGenParser.IllegalHandedness", //$NON-NLS-1$
-				line, h);
+				line, handed);
 			warnings.add(msg);
 
 		}
-		thePC.setHanded(h);
+		HandedCompat.setCurrentHandedness(thePC.getCharID(), handed);
 	}
 
 	private void parseHeightLine(final String line)
@@ -2971,7 +2968,7 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseInterestsLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.INTERESTS,
+		thePC.setPCAttribute(PCStringKey.INTERESTS,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_INTERESTS.length() + 1)));
 	}
 
@@ -3052,7 +3049,7 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseLocationLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.LOCATION,
+		thePC.setPCAttribute(PCStringKey.LOCATION,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_LOCATION.length() + 1)));
 	}
 
@@ -3373,25 +3370,25 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parsePersonalityTrait1Line(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.PERSONALITY1,
+		thePC.setPCAttribute(PCStringKey.PERSONALITY1,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_PERSONALITYTRAIT1.length() + 1)));
 	}
 
 	private void parsePersonalityTrait2Line(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.PERSONALITY2,
+		thePC.setPCAttribute(PCStringKey.PERSONALITY2,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_PERSONALITYTRAIT2.length() + 1)));
 	}
 
 	private void parsePhobiasLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.PHOBIAS,
+		thePC.setPCAttribute(PCStringKey.PHOBIAS,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_PHOBIAS.length() + 1)));
 	}
 
 	private void parsePlayerNameLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.PLAYERSNAME,
+		thePC.setPCAttribute(PCStringKey.PLAYERSNAME,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_PLAYERNAME.length() + 1)));
 	}
 
@@ -3519,7 +3516,7 @@ final class PCGVer2Parser implements PCGParser
 	//this method is obsolete, but left in for backward-compatibility, replaced by parseCityLine()
 	private void parseResidenceLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.RESIDENCE,
+		thePC.setPCAttribute(PCStringKey.RESIDENCE,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_RESIDENCE.length() + 1)));
 		thePC.setDirty(true); // trigger a save prompt so that the PCG will be updated
 	}
@@ -3716,13 +3713,13 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseSkinColorLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.SKINCOLOR,
+		thePC.setPCAttribute(PCStringKey.SKINCOLOR,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_SKINCOLOR.length() + 1)));
 	}
 
 	private void parseSpeechPatternLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.SPEECHTENDENCY,
+		thePC.setPCAttribute(PCStringKey.SPEECHTENDENCY,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_SPEECHPATTERN.length() + 1)));
 	}
 
@@ -4264,7 +4261,7 @@ final class PCGVer2Parser implements PCGParser
 
 	private void parseTabNameLine(final String line)
 	{
-		thePC.setPCAttribute(PCAttribute.TABNAME,
+		thePC.setPCAttribute(PCStringKey.TABNAME,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_TABNAME.length() + 1)));
 	}
 
@@ -4706,7 +4703,7 @@ final class PCGVer2Parser implements PCGParser
 	 */
 	private void parseCharacterBioLine(final String line)
 	{
-		thePC.setPCAttribute(NotePCAttribute.BIO,
+		thePC.setPCAttribute(PCStringKey.BIO,
 			EntityEncoder.decode(line.substring(IOConstants.TAG_CHARACTERBIO.length() + 1)));
 	}
 
@@ -4953,7 +4950,7 @@ final class PCGVer2Parser implements PCGParser
 			{
 				try
 				{
-					itemQuantity = new Float(element.getText());
+					itemQuantity = Float.valueOf(element.getText());
 				}
 				catch (NumberFormatException nfe)
 				{
